--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "clean": "rimraf dist",
     "dev": "webpack-dev-server",
     "json-server": "json-server -p 3001 generate.js",
-    "lint": "xo",
     "start": "concurrently \"npm run json-server\" \"npm run dev\""
   },
   "license": "MIT",
@@ -17,18 +16,14 @@
     "@webpack-blocks/babel6": "^0.4.1",
     "@webpack-blocks/dev-server2": "^0.4.0",
     "@webpack-blocks/webpack2": "^0.4.0",
-    "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "concurrently": "^3.3.0",
-    "eslint-config-xo-react": "^0.12.0",
-    "eslint-plugin-react": "^7.0.1",
     "html-webpack-plugin": "^2.28.0",
     "rimraf": "^2.6.0",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.1",
-    "xo": "^0.18.2"
+    "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
     "faker": "^4.1.0",
@@ -39,53 +34,5 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "rxjs": "^5.4.0"
-  },
-  "xo": {
-    "envs": [
-      "browser"
-    ],
-    "esnext": true,
-    "extends": "xo-react",
-    "parser": "babel-eslint",
-    "semicolon": false,
-    "rules": {
-      "comma-dangle": [
-        "error",
-        "always-multiline"
-      ],
-      "import/extensions": [
-        "error",
-        "never",
-        {
-          "json": "always",
-          "svg": "always"
-        }
-      ],
-      "import/order": [
-        "error",
-        {
-          "groups": [
-            "builtin",
-            [
-              "external",
-              "internal"
-            ],
-            "parent",
-            [
-              "index",
-              "sibling"
-            ]
-          ]
-        }
-      ],
-      "object-curly-spacing": [
-        "error",
-        "always"
-      ],
-      "react/jsx-closing-bracket-location": [
-        "error",
-        "tag-aligned"
-      ]
-    }
   }
 }
