--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rimraf dist",
     "dev": "webpack-dev-server",
     "json-server": "json-server -p 3001 generate.js",
+    "lint": "eslint src",
     "start": "concurrently \"npm run json-server\" \"npm run dev\""
   },
   "license": "MIT",
@@ -16,11 +17,19 @@
     "@webpack-blocks/babel6": "^0.4.1",
     "@webpack-blocks/dev-server2": "^0.4.0",
     "@webpack-blocks/webpack2": "^0.4.0",
+    "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "concurrently": "^3.3.0",
+    "eslint": "^3.19.0",
+    "eslint-config-prettier": "^2.1.1",
+    "eslint-config-xo": "^0.18.2",
+    "eslint-config-xo-react": "^0.12.0",
+    "eslint-plugin-prettier": "^2.1.1",
+    "eslint-plugin-react": "^7.0.1",
     "html-webpack-plugin": "^2.28.0",
+    "prettier-eslint": "^6.2.3",
     "rimraf": "^2.6.0",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.1"
@@ -34,5 +43,40 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "rxjs": "^5.4.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es6": true,
+      "node": true
+    },
+    "extends": [
+      "xo",
+      "xo-react",
+      "prettier",
+      "prettier/react"
+    ],
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "sourceType": "module",
+      "allowImportExportEverywhere": false,
+      "codeFrame": false
+    },
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "capitalized-comments": "off",
+			"prettier/prettier": [
+				"error",
+				{
+					"trailingComma": "all",
+					"singleQuote": true,
+					"semi": false,
+          "jsxBracketSameLine": false,
+					"useTabs": true
+				}
+			]
+    }
   }
 }
