--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-prettier": "^2.1.1",
     "eslint-config-xo": "^0.18.2",
     "eslint-config-xo-react": "^0.12.0",
+    "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-prettier": "^2.1.1",
     "eslint-plugin-react": "^7.0.1",
     "html-webpack-plugin": "^2.28.0",
@@ -51,8 +52,11 @@
       "node": true
     },
     "extends": [
-      "xo",
-      "xo-react",
+      "eslint:recommended",
+			"plugin:import/errors",
+			"plugin:import/warnings",
+			"plugin:import/react",
+			"plugin:react/recommended",
       "prettier",
       "prettier/react"
     ],
@@ -67,16 +71,16 @@
     ],
     "rules": {
       "capitalized-comments": "off",
-			"prettier/prettier": [
-				"error",
-				{
-					"trailingComma": "all",
-					"singleQuote": true,
-					"semi": false,
+      "prettier/prettier": [
+        "error",
+        {
+          "trailingComma": "all",
+          "singleQuote": true,
+          "semi": false,
           "jsxBracketSameLine": false,
-					"useTabs": true
-				}
-			]
+          "useTabs": true
+        }
+      ]
     }
   }
 }
