--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf dist",
     "dev": "webpack-dev-server",
     "json-server": "json-server -p 3001 generate.js",
-    "lint": "eslint src",
+    "lint": "prettier-eslint --write \"src/**/*.js\"",
     "start": "concurrently \"npm run json-server\" \"npm run dev\"",
     "precommit": "lint-staged"
   },
@@ -28,6 +28,7 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-prettier": "^2.1.1",
     "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-unicorn": "^2.1.1",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.4",
     "lint-staged": "^3.5.1",
@@ -58,16 +59,19 @@
       "plugin:import/warnings",
       "plugin:import/react",
       "plugin:react/recommended",
+      "plugin:unicorn/recommended",
       "prettier",
       "prettier/react"
     ],
     "parser": "babel-eslint",
     "parserOptions": {
+			"ecmaVersion": 2017,
       "sourceType": "module",
       "allowImportExportEverywhere": false,
       "codeFrame": false
     },
     "plugins": [
+      "unicorn",
       "prettier"
     ],
     "rules": {
