--- a/package.json
+++ b/package.json
@@ -1,97 +1,87 @@
 {
-  "name": "observables-devmtn",
-  "version": "1.0.0",
-  "description": "Samples for Dev Mountain Observables Lecture",
-  "repository": {},
-  "author": "Jeremy Lund <jeremy.r.lund@gmail.com>",
-  "scripts": {
-    "build": "webpack",
-    "clean": "rimraf dist",
-    "dev": "webpack-dev-server",
-    "json-server": "json-server -p 3001 generate.js",
-    "lint": "prettier-eslint --write \"src/**/*.js\"",
-    "start": "concurrently \"npm run json-server\" \"npm run dev\"",
-    "precommit": "lint-staged"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "@webpack-blocks/babel6": "^0.4.1",
-    "@webpack-blocks/dev-server2": "^0.4.0",
-    "@webpack-blocks/webpack2": "^0.4.0",
-    "babel-eslint": "^7.2.3",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "concurrently": "^3.3.0",
-    "eslint": "^3.19.0",
-    "eslint-config-prettier": "^2.1.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-prettier": "^2.1.1",
-    "eslint-plugin-react": "^7.0.1",
-    "eslint-plugin-unicorn": "^2.1.1",
-    "html-webpack-plugin": "^2.28.0",
-    "husky": "^0.13.4",
-    "lint-staged": "^3.5.1",
-    "prettier-eslint-cli": "^3.6.1",
-    "rimraf": "^2.6.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.1"
-  },
-  "dependencies": {
-    "faker": "^4.1.0",
-    "glamor": "^2.20.25",
-    "json-server": "^0.10.1",
-    "lodash.times": "^4.3.2",
-    "prop-types": "^15.5.10",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "rxjs": "^5.4.0"
-  },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "es6": true,
-      "node": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "plugin:import/errors",
-      "plugin:import/warnings",
-      "plugin:import/react",
-      "plugin:react/recommended",
-      "plugin:unicorn/recommended",
-      "prettier",
-      "prettier/react"
-    ],
-    "parser": "babel-eslint",
-    "parserOptions": {
+	"name": "observables-devmtn",
+	"version": "1.0.0",
+	"description": "Samples for Dev Mountain Observables Lecture",
+	"repository": {},
+	"author": "Jeremy Lund <jeremy.r.lund@gmail.com>",
+	"scripts": {
+		"build": "webpack",
+		"clean": "rimraf dist",
+		"dev": "webpack-dev-server",
+		"format": "prettier \"src/**/*.js\" --write",
+		"json-server": "json-server -p 3001 generate.js",
+		"start": "concurrently \"npm run json-server\" \"npm run dev\"",
+		"precommit": "lint-staged"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"@webpack-blocks/babel6": "^0.4.1",
+		"@webpack-blocks/dev-server2": "^0.4.0",
+		"@webpack-blocks/webpack2": "^0.4.0",
+		"babel-eslint": "^7.2.3",
+		"babel-preset-es2015": "^6.22.0",
+		"babel-preset-react": "^6.23.0",
+		"babel-preset-stage-2": "^6.22.0",
+		"concurrently": "^3.3.0",
+		"eslint": "^3.19.0",
+		"eslint-config-prettier": "^2.9.0",
+		"eslint-plugin-import": "^2.3.0",
+		"eslint-plugin-react": "^7.0.1",
+		"eslint-plugin-unicorn": "^2.1.1",
+		"html-webpack-plugin": "^2.28.0",
+		"husky": "^0.13.4",
+		"lint-staged": "^3.5.1",
+		"prettier": "^1.12.1",
+		"rimraf": "^2.6.0",
+		"webpack": "^2.6.1",
+		"webpack-dev-server": "^2.4.1"
+	},
+	"dependencies": {
+		"faker": "^4.1.0",
+		"glamor": "^2.20.25",
+		"json-server": "^0.10.1",
+		"lodash.times": "^4.3.2",
+		"prop-types": "^15.5.10",
+		"react": "^15.4.2",
+		"react-dom": "^15.4.2",
+		"rxjs": "^5.4.0"
+	},
+	"eslintConfig": {
+		"env": {
+			"browser": true,
+			"es6": true,
+			"node": true
+		},
+		"extends": [
+			"eslint:recommended",
+			"plugin:import/errors",
+			"plugin:import/warnings",
+			"plugin:import/react",
+			"plugin:react/recommended",
+			"plugin:unicorn/recommended",
+			"prettier",
+			"prettier/react"
+		],
+		"parser": "babel-eslint",
+		"parserOptions": {
 			"ecmaVersion": 2017,
-      "sourceType": "module",
-      "allowImportExportEverywhere": false,
-      "codeFrame": false
-    },
-    "plugins": [
-      "unicorn",
-      "prettier"
-    ],
-    "rules": {
-      "capitalized-comments": "off",
-      "prettier/prettier": [
-        "error",
-        {
-          "trailingComma": "all",
-          "singleQuote": true,
-          "semi": false,
-          "jsxBracketSameLine": false,
-          "useTabs": true
-        }
-      ]
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier-eslint --write",
-      "git add"
-    ]
-  }
+			"sourceType": "module",
+			"allowImportExportEverywhere": false,
+			"codeFrame": false
+		},
+		"plugins": [
+			"import",
+			"unicorn",
+			"prettier"
+		],
+		"rules": {
+			"capitalized-comments": "off"
+		}
+	},
+	"lint-staged": {
+		"*.js": [
+			"prettier --write",
+			"git add"
+		]
+	}
 }
